--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ Depends:
     tm (>= 0.6),
     RCurl (>= 1.95-4.1),
     jsonlite (>= 0.9.8)
+Suggests: knitr, markdown
+VignetteBuilder: knitr
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
 License: GPL (>= 3)
 URL: http://manifesto-project.wzb.eu/
