--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Depends:
     R (>= 3.1.0),
     httr (>= 0.3),
     tm (>= 0.6),
-    jsonlite (>= 0.9.8)
+    jsonlite (>= 0.9.8),
+    plyr (>= 1.8)
 Suggests: knitr, markdown
 VignetteBuilder: knitr
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
