Basic version of scaling functions for manifestoR

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: manifestoR
 Title: Access and process data and documents of the Manifesto Project
 Date: 2004-07-28
-Version: 0.6-0
+Version: 0.6-2
 Authors@R: c(person("Jirka", "Lewandowski", role = c("aut", "cre"),
     email = "jirka.lewandowski@wzb.eu"))
 Author: Jirka Lewandowski <jirka.lewandowski@wzb.eu>
@@ -12,10 +12,11 @@ Depends:
     httr (>= 0.3),
     tm (>= 0.6),
     jsonlite (>= 0.9.12),
-    plyr (>= 1.8)
+    plyr (>= 1.8),
+    functional (>= 0.6)
 Suggests: knitr, markdown
 VignetteBuilder: knitr
-Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
+Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R scaling.R
 License: GPL (>= 3)
 URL: http://manifesto-project.wzb.eu/
 LazyData: true
