--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: manifestoR
 Title: Access and process data and documents of the Manifesto Project
 Date: 2004-07-28
-Version: 0.8-9
+Version: 0.9-0
 Authors@R: c(person("Jirka", "Lewandowski", role = c("aut", "cre"),
     email = "jirka.lewandowski@wzb.eu"))
 Author: Jirka Lewandowski <jirka.lewandowski@wzb.eu>
@@ -17,7 +17,7 @@ Depends:
 Suggests: knitr, markdown,
     testthat
 VignetteBuilder: knitr
-Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R scaling.R
+Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R scaling.R renaming.R
 License: GPL (>= 3)
 URL: http://manifesto-project.wzb.eu/
 LazyData: true
