--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,10 @@ Maintainer: Jirka Lewandowski <jirka.lewandowski@wzb.eu>
 Description: Access and process data and documents of the Manifesto Project
 Depends: 
     R (>= 3.1.0),
+    NLP (>= 0.1-3),
     tm (>= 0.6),
     dplyr (>= 0.4.1)
 Imports:
-    NLP,
     utils,
     httr (>= 0.3),
     jsonlite (>= 0.9.12),
