--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Suggests:
     rmarkdown,
     testthat
 VignetteBuilder: knitr
-Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R scaling.R renaming.R
+Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R codes.R scaling.R renaming.R
 License: GPL (>= 3)
 URL: http://manifesto-project.wzb.eu/
 LazyData: true
