Static vignette experiment

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,9 @@ Imports:
 Suggests:
     knitr,
     rmarkdown,
-    testthat
-VignetteBuilder: knitr
+    testthat,
+    R.rsp
+VignetteBuilder: R.rsp
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R codes.R scaling.R renaming.R
 License: GPL (>= 3)
 URL: http://manifesto-project.wzb.eu/
