--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Suggests:
     testthat,
     R.rsp
 VignetteBuilder: R.rsp
-Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R codes.R scaling.R renaming.R
+Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
+    codes.R scaling.R renaming.R bootstrap.R
 License: GPL (>= 3)
 URL: http://manifesto-project.wzb.eu/
 LazyData: true
