github-style README, link to repo in DESCRIPTION and vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,5 +31,6 @@ VignetteBuilder: R.rsp
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
     codes.R scaling.R renaming.R bootstrap.R
 License: GPL (>= 3)
-URL: http://manifesto-project.wzb.eu/
+URL: https://github.com/ManifestoProject/manifestoR, https://manifesto-project.wzb.eu/
+BugReports: https://github.com/ManifestoProject/manifestoR/issues
 LazyData: true
