--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,9 @@ Version: 0.9-11
 Authors@R: c(person("Jirka", "Lewandowski",
 		    role = c("aut", "cre"),
 		    email = "jirka.lewandowski@wzb.eu"),
+       person("Nicolas", "Merz",
+        role = c("aut"),
+        email = "nicolas.merz@wzb.eu"),
 	     person("Sven", "Regel",
 		    role = c("ctb"),
 		    email = "sven.regel@wzb.eu"),
