--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,8 +34,8 @@ Suggests:
     R.rsp
 VignetteBuilder: knitr
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
-    codes.R scaling_general.R scaling_functions.R scaling_jahn.R renaming.R
-    scaling_bootstrap.R 
+    codes.R scaling_general.R scaling_rile.R scaling_functions.R scaling_jahn.R
+    scaling_bootstrap.R renaming.R
 License: GPL (>= 3)
 URL: https://github.com/ManifestoProject/manifestoR, https://manifesto-project.wzb.eu/
 BugReports: https://github.com/ManifestoProject/manifestoR/issues
