Fixes Description for CRAN

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,9 @@ Authors@R: c(person("Jirka", "Lewandowski",
 	     person("Pola", "Lehmann",
 		    role = c("ctb"),
 		    email = "pola.lehmann@wzb.eu"))
-Description: manifestoR provides access to coded election programmes from
+Description: Provides access to coded election programmes from
     the Manifesto Corpus and to the Manifesto Project's Main Dataset. The election
-    programme texts are given in the Corpus format of the package `tm` to enable
+    programme texts are given in the Corpus format of the package 'tm' to enable
     easy use of text processing and text mining functionality. Specific functions
     for scaling of coded political texts are included.
 Depends: 
