Expanded DESCRIPTION for CRAN

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,11 @@ Authors@R: c(person("Jirka", "Lewandowski",
 		    role = c("ctb"),
 		    email = "pola.lehmann@wzb.eu"))
 Description: Provides access to coded election programmes from
-    the Manifesto Corpus and to the Manifesto Project's Main Dataset. The election
-    programme texts are given in the Corpus format of the package 'tm' to enable
+    the Manifesto Corpus and to the Manifesto Project's Main Dataset. The Manifesto
+    Project (https://manifesto-project.wzb.eu) collects and analyses election
+    programmes across time and space to measure the political preferences
+    of parties. The Manifesto Corpus contains the collected
+    and annotated election programmes in the Corpus format of the package 'tm' to enable
     easy use of text processing and text mining functionality. Specific functions
     for scaling of coded political texts are included.
 Depends: 
