--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     utils,
     httr (>= 0.3),
     jsonlite (>= 0.9.12),
-    functional (>= 0.6)
+    functional (>= 0.6),
+    zoo (>= 1.7-11)
 Suggests:
     knitr,
     rmarkdown,
@@ -40,7 +41,7 @@ Suggests:
 VignetteBuilder: R.rsp
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
     codes.R scaling_general.R scaling_rile.R scaling_functions.R
-    scaling_bootstrap.R renaming.R
+    scaling_bootstrap.R renaming.R dataset.R
 License: GPL (>= 3)
 URL: https://github.com/ManifestoProject/manifestoR, https://manifesto-project.wzb.eu/
 BugReports: https://github.com/ManifestoProject/manifestoR/issues
