--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,13 +32,14 @@ Imports:
     httr (>= 0.3),
     jsonlite (>= 0.9.12),
     functional (>= 0.6),
-    zoo (>= 1.7-11)
+    zoo (>= 1.7-11),
+    psych
 Suggests:
     knitr,
     rmarkdown,
     testthat,
     R.rsp
-VignetteBuilder: R.rsp
+VignetteBuilder: knitr
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
     codes.R scaling_general.R scaling_rile.R scaling_functions.R
     scaling_bootstrap.R renaming.R dataset.R
