--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,7 @@ Suggests:
     rmarkdown,
     testthat,
     R.rsp
-VignetteBuilder: knitr
+VignetteBuilder: R.rsp
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
     codes.R scaling_general.R scaling_rile.R scaling_functions.R
     scaling_bootstrap.R renaming.R dataset.R
