--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: manifestoR
 Title: Access and Process Data and Documents of the Manifesto Project
 Date: 2015-07-16
-Version: 1.0-4
+Version: 1.0-5
 Authors@R: c(person("Jirka", "Lewandowski",
 		    role = c("aut", "cre"),
 		    email = "jirka.lewandowski@wzb.eu"),
@@ -41,7 +41,7 @@ Suggests:
     testthat,
     R.rsp,
     devtools (>= 1.7.0)
-VignetteBuilder: knitr
+VignetteBuilder: R.rsp
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
     codes.R scaling_general.R scaling_rile.R scaling_functions.R
     scaling_bootstrap.R dataset.R
