Added issue attention diversity and nicheness to Collate

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,8 +43,8 @@ Suggests:
     devtools (>= 1.7.0)
 VignetteBuilder: R.rsp
 Collate: manifestoR-package.r globals.R cache.R db_api.R corpus.R manifesto.R
-    codes.R scaling_general.R scaling_rile.R scaling_functions.R
-    scaling_bootstrap.R dataset.R
+    codes.R scaling_general.R scaling_rile.R scaling_functions.R nicheness.R
+    issue_attention.R scaling_bootstrap.R dataset.R
 License: GPL (>= 3)
 URL: https://github.com/ManifestoProject/manifestoR, https://manifesto-project.wzb.eu/
 BugReports: https://github.com/ManifestoProject/manifestoR/issues
