--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: manifestoR
 Title: Access and Process Data and Documents of the Manifesto Project
-Date: 2015-10-28
-Version: 1.0-99
+Date: 2015-11-11
+Version: 1.1
 Authors@R: c(person("Jirka", "Lewandowski",
 		    role = c("aut", "cre"),
 		    email = "jirka.lewandowski@wzb.eu"),
@@ -45,8 +45,8 @@ Suggests:
 VignetteBuilder: R.rsp
 Collate: manifestoR-package.r globals.R pipe_helpers.R
     cache.R db_api.R corpus.R manifesto.R
-    codes.R scaling_general.R scaling_rile.R scaling_functions.R nicheness.R
-    issue_attention.R scaling_bootstrap.R dataset.R
+    codes.R scaling_general.R scaling_rile.R scaling_functions.R 
+    issue_attention.R nicheness.R scaling_bootstrap.R dataset.R
 License: GPL (>= 3)
 URL: https://github.com/ManifestoProject/manifestoR, https://manifesto-project.wzb.eu/
 BugReports: https://github.com/ManifestoProject/manifestoR/issues
