--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,16 +14,15 @@ Authors@R: c(person("Jirka", "Lewandowski",
 	     person("Pola", "Lehmann",
 		    role = c("ctb"),
 		    email = "pola.lehmann@wzb.eu"))
-Description: Provides access to coded election programmes from
-    the Manifesto Corpus and to the Manifesto Project's Main Dataset and routines
-    to analyse this data. The Manifesto
-    Project (https://manifesto-project.wzb.eu) collects and analyses election
-    programmes across time and space to measure the political preferences
-    of parties. The Manifesto Corpus contains the collected
-    and annotated election programmes in the Corpus format of the package 'tm' to enable
+Description: Provides access to coded election programmes from the Manifesto
+    Corpus and to the Manifesto Project's Main Dataset and routines to analyse this
+    data. The Manifesto Project (https://manifesto-project.wzb.eu) collects and
+    analyses election programmes across time and space to measure the political
+    preferences of parties. The Manifesto Corpus contains the collected and
+    annotated election programmes in the Corpus format of the package 'tm' to enable
     easy use of text processing and text mining functionality. Specific functions
     for scaling of coded political texts are included.
-Depends: 
+Depends:
     R (>= 3.1.0),
     NLP (>= 0.1-3),
     tm (>= 0.6),
@@ -44,11 +43,26 @@ Suggests:
     R.rsp,
     devtools (>= 1.7.0)
 VignetteBuilder: R.rsp
-Collate: manifestoR-package.r globals.R pipe_helpers.R
-    cache.R db_api.R corpus.R manifesto.R
-    codes.R scaling_general.R scaling_rile.R scaling_functions.R 
-    issue_attention.R nicheness.R scaling_bootstrap.R dataset.R
+Collate:
+    manifestoR-package.r
+    globals.R
+    pipe_helpers.R
+    cache.R
+    db_api.R
+    corpus.R
+    manifesto.R
+    codes.R
+    scaling_general.R
+    scaling_rile.R
+    scaling_functions.R
+    issue_attention.R
+    nicheness.R
+    scaling_bootstrap.R
+    dataset.R
 License: GPL (>= 3)
-URL: https://github.com/ManifestoProject/manifestoR, https://manifesto-project.wzb.eu/
+URL:
+  https://github.com/ManifestoProject/manifestoR,
+  https://manifesto-project.wzb.eu/
 BugReports: https://github.com/ManifestoProject/manifestoR/issues
 LazyData: true
+RoxygenNote: 5.0.1
