--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ pack_manifestoR:
     - vignettes/manifestoRworkflow.pdf
 
 test_manifestoR:
-  stage: test
+  stage: buid
   script:
     - echo $MANIFESTOAPIKEY > tests/manifesto_apikey.txt
     - R -e "library(devtools); document()"
@@ -25,6 +25,5 @@ test_manifestoR:
 
 stages:
   - build
-  - test
 
   
