--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: manifestoR
 Title: Access and Process Data and Documents of the Manifesto Project
-Date: 2016-06-28
-Version: 1.2.2
+Date: 2016-07-04
+Version: 1.2.2.0.99
 Authors@R: c(person("Jirka", "Lewandowski",
 		    role = c("aut", "cre"),
 		    email = "jirka.lewandowski@wzb.eu"),
@@ -44,7 +44,9 @@ Suggests:
     R.rsp,
     haven,
     readxl,
-    devtools (>= 1.7.0)
+    devtools (>= 1.7.0),
+    formatR,
+    highr
 VignetteBuilder: R.rsp
 Collate:
     manifestoR-package.r
