CI: keep PDF vignette also in inst/doc

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ compile_vignette:
   artifacts:
     paths:
       - vignettes/manifestoRworkflow.pdf
+      - inst/doc/manifestoRworkflow.pdf
       
 test_manifestoR:
   stage: test
