CI: workaround while gitlab CI does not transfer artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,11 @@ pack_manifestoR:
   script:
     - echo $MANIFESTOAPIKEY > tests/manifesto_apikey.txt
     - mkdir inst/doc
+    - R -e "library(magrittr); 'DESCRIPTION' %>% readLines() %>% { gsub('(VignetteBuilder.)\\\\sR.rsp', '\\\\1 knitr', .) } %>% writeLines('DESCRIPTION')"
+    - cat DESCRIPTION
+    - R -e "library(devtools); with_libpaths('~/.Rlib', build_vignettes());"
+    - cp inst/doc/manifestoRworkflow.pdf vignettes/
+    - R -e "library(magrittr); 'DESCRIPTION' %>% readLines() %>% { gsub('(VignetteBuilder.)\\\\sknitr', '\\\\1 R.rsp', .) } %>% writeLines('DESCRIPTION')"
     - R -e "library(devtools); with_libpaths('~/.Rlib', { document(); file.copy(build(path = './'), 'manifestoR.tar.gz') })"
     - R CMD check --as-cran manifestoR.tar.gz > check_results.txt
     - cat check_results.txt
@@ -38,8 +43,6 @@ pack_manifestoR:
     paths:
     - manifestoR.tar.gz
     - check_results.txt
-  dependencies:
-    - compile_vignette
 
 stages:
   - prepare
