--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,8 +37,7 @@ pack_manifestoR:
     - cp inst/doc/manifestoRworkflow.pdf vignettes/
     - R -e "library(magrittr); 'DESCRIPTION' %>% readLines() %>% { gsub('(VignetteBuilder.)\\\\sknitr', '\\\\1 R.rsp', .) } %>% writeLines('DESCRIPTION')"
     - R -e "library(devtools); with_libpaths('~/.Rlib', { document(); file.copy(build(path = './'), 'manifestoR.tar.gz') })"
-    - R CMD check --as-cran manifestoR.tar.gz > check_results.txt
-    - cat check_results.txt
+    - R CMD check --as-cran manifestoR.tar.gz
   artifacts:
     paths:
     - manifestoR.tar.gz
