--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 prepare_environment:
   stage: prepare
   script:
-    - R -e "dir.create('~/.Rlib'); library(devtools); with_libpaths('~/.Rlib/', {
+    - R -e "dir.create('~/.Rlib'); library(devtools); library(withr); withr::with_libpaths('~/.Rlib/', {
         install_deps(dependencies = c('Depends', 'Imports','Suggests'), repos = 'http://r-cran.manifesto-project.wzb.eu');
         document();})"
         
@@ -24,7 +24,7 @@ test_manifestoR:
   stage: test
   script:
     - echo $MANIFESTOAPIKEY > tests/manifesto_apikey.txt
-    - R -e "library(devtools); with_libpaths('~/.Rlib', { document(); library(testthat); test(reporter = 'stop') })"
+    - R -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib', { document(); library(testthat); test(reporter = 'stop') })"
 
 pack_manifestoR:
   stage: pack
@@ -33,10 +33,10 @@ pack_manifestoR:
     - mkdir inst/doc
     - R -e "library(magrittr); 'DESCRIPTION' %>% readLines() %>% { gsub('(VignetteBuilder.)\\\\sR.rsp', '\\\\1 knitr', .) } %>% writeLines('DESCRIPTION')"
     - cat DESCRIPTION
-    - R -e "library(devtools); with_libpaths('~/.Rlib', build_vignettes());"
+    - R -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib', build_vignettes());"
     - cp inst/doc/manifestoRworkflow.pdf vignettes/
     - R -e "library(magrittr); 'DESCRIPTION' %>% readLines() %>% { gsub('(VignetteBuilder.)\\\\sknitr', '\\\\1 R.rsp', .) } %>% writeLines('DESCRIPTION')"
-    - R -e "library(devtools); with_libpaths('~/.Rlib', { document(); file.copy(build(path = './'), 'manifestoR.tar.gz') })"
+    - R -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib', { document(); file.copy(build(path = './'), 'manifestoR.tar.gz') })"
     - (export R_LIBS_SITE='~/.Rlib';  R -e ".libPaths()"; R CMD check --as-cran manifestoR.tar.gz)
   artifacts:
     paths:
