--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,8 @@
 prepare_environment:
   stage: prepare
   script:
-    - R --vanilla -e "dir.create('~/.Rlib'); library(devtools); library(withr); withr::with_libpaths('~/.Rlib/', action = 'replace', { cat(.libPaths());
-        install_deps(dependencies = c('Depends', 'Imports','Suggests'), repos = 'http://r-cran.manifesto-project.wzb.eu');
-        document();})"
-        
+    - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "library(devtools); cat(.libPaths()); install_deps(dependencies = c('Depends', 'Imports','Suggests'), repos = 'http://r-cran.manifesto-project.wzb.eu');")
+
 compile_vignette:
   stage: vignette
   script:
