--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
 prepare_environment:
   stage: prepare
   script:
-    - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "install.packages('DBI', repos = 'http://r-cran.manifesto-project.wzb.eu'); library(devtools); install_deps(dependencies = c('Depends', 'Imports','Suggests'), repos = 'http://r-cran.manifesto-project.wzb.eu');")
+    - rm -rf .Rlib.old
+    - mv .Rlib .Rlib.old
+    - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "install.packages('devtools', repos = 'http://r-cran.manifesto-project.wzb.eu'); library(devtools); install_deps(dependencies = c('Depends', 'Imports','Suggests'), repos = 'http://r-cran.manifesto-project.wzb.eu');")
 
 compile_vignette:
   stage: vignette
