--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 prepare_environment:
   stage: prepare
   script:
-    - rm -rf .Rlib.old
-    - mv .Rlib .Rlib.old
+    - rm -rf ~/.Rlib.old
+    - mv ~/.Rlib ~/.Rlib.old
     - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "install.packages('devtools', repos = 'http://r-cran.manifesto-project.wzb.eu'); library(devtools); install_deps(dependencies = c('Depends', 'Imports','Suggests'), repos = 'http://r-cran.manifesto-project.wzb.eu');")
 
 compile_vignette:
