CI: install to specific lib path

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ prepare_environment:
   script:
     - rm -rf ~/.Rlib.old
     - mv ~/.Rlib ~/.Rlib.old
-    - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "install.packages('devtools', repos = 'http://r-cran.manifesto-project.wzb.eu'); library(devtools); install_deps(dependencies = c('Depends', 'Imports','Suggests'), repos = 'http://r-cran.manifesto-project.wzb.eu');")
+    - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "install.packages('devtools', lib = '~/.Rlib`, repos = 'http://r-cran.manifesto-project.wzb.eu'); library(devtools); install_deps(dependencies = c('Depends', 'Imports','Suggests'), lib = '~/.Rlib`, repos = 'http://r-cran.manifesto-project.wzb.eu');")
 
 compile_vignette:
   stage: vignette
