--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ prepare_environment:
   stage: prepare
   script:
     - R -e "dir.create('~/.Rlib')"
-    - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "install.packages('devtools', lib = '~/.Rlib`, repos = 'http://r-cran.manifesto-project.wzb.eu'); library(devtools); install_deps(dependencies = c('Depends', 'Imports','Suggests'), lib = '~/.Rlib`, repos = 'http://r-cran.manifesto-project.wzb.eu');")
+    - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "install.packages('devtools', lib = '~/.Rlib', repos = 'http://r-cran.manifesto-project.wzb.eu'); library(devtools); install_deps(dependencies = c('Depends', 'Imports','Suggests'), lib = '~/.Rlib', repos = 'http://r-cran.manifesto-project.wzb.eu');")
 
 compile_vignette:
   stage: vignette
