--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: manifestoR
 Title: Access and Process Data and Documents of the Manifesto Project
-Date: 2016-07-04
+Date: 2016-07-12
 Version: 1.2.2.0.99
 Authors@R: c(person("Jirka", "Lewandowski",
 		    role = c("aut", "cre"),
@@ -26,7 +26,8 @@ Depends:
     R (>= 3.1.0),
     NLP (>= 0.1-3),
     tm (>= 0.6),
-    dplyr (>= 0.4.3)
+    dplyr (>= 0.5),
+    tibble (>= 1.1)
 Imports:
     utils,
     stats,
