--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ test_manifestoR:
   stage: test
   script:
     - echo $MANIFESTOAPIKEY > tests/manifesto_apikey.txt
-    - R --vanilla -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib', { document(); library(testthat); test() })"
+    - R --vanilla -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib', { document(); library(testthat); test(reporter = 'stop') })"
 
 pack_manifestoR:
   stage: pack
