--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ prepare_environment:
   stage: prepare
   script:
     - R -e "dir.create('~/.Rlib')"
-    - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "options(repos = 'http://r-cran.manifesto-project.wzb.eu'); install.packages(c('R6', 'curl', 'devtools'), lib = '~/.Rlib'); library(devtools); install_deps(dependencies = c('Depends', 'Imports','Suggests'), lib = '~/.Rlib');")
+    - (export R_LIBS_USER='~/.Rlib'; export R_LIBS_SITE='~/.Rlib'; R --vanilla -e "options(repos = 'http://r-cran.manifesto-project.wzb.eu'); install.packages('devtools', lib = '~/.Rlib'); library(devtools); install_deps(dependencies = c('Depends', 'Imports','Suggests'), lib = '~/.Rlib');")
 
 compile_vignette:
   stage: vignette
