--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,8 @@ test_manifestoR:
     - R --vanilla -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib-dev', { document(); library(testthat); test(reporter = 'stop') })"
 
 pack_manifestoR:
+  only:
+    - master
   dependencies:
     - compile_vignette
   stage: pack
