--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ test_manifestoR:
   stage: test
   script:
     - echo $MANIFESTOAPIKEY > tests/manifesto_apikey.txt
-    - R --vanilla -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib-dev', { document(); library(testthat); test(reporter = 'stop'); session_info(); })"
+    - R --vanilla -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib-dev', { document(); library(testthat); results <- test(reporter = 'stop'); results; session_info(); })"
 
 pack_manifestoR:
   only:
