--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,15 +5,18 @@ Version: 1.2.4
 Authors@R: c(person("Jirka", "Lewandowski",
 		    role = c("aut", "cre"),
 		    email = "jirka.lewandowski@wzb.eu"),
-       person("Nicolas", "Merz",
-        role = c("aut"),
-        email = "nicolas.merz@wzb.eu"),
+             person("Nicolas", "Merz",
+                    role = c("aut"),
+                    email = "nicolas.merz@wzb.eu"),
 	     person("Sven", "Regel",
 		    role = c("ctb"),
 		    email = "sven.regel@wzb.eu"),
 	     person("Pola", "Lehmann",
 		    role = c("ctb"),
-		    email = "pola.lehmann@wzb.eu"))
+		    email = "pola.lehmann@wzb.eu"),
+             person("Paul", "Muscat",
+                    role = c("ctb"),
+                    email = "paul.muscat@wzb.eu"))
 Description: Provides access to coded election programmes from the Manifesto
     Corpus and to the Manifesto Project's Main Dataset and routines to analyse this
     data. The Manifesto Project (https://manifesto-project.wzb.eu) collects and
