New CRAN policy for URLs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Authors@R: c(person("Jirka", "Lewandowski",
                     email = "paul.muscat@wzb.eu"))
 Description: Provides access to coded election programmes from the Manifesto
     Corpus and to the Manifesto Project's Main Dataset and routines to analyse this
-    data. The Manifesto Project (https://manifesto-project.wzb.eu) collects and
+    data. The Manifesto Project <https://manifesto-project.wzb.eu> collects and
     analyses election programmes across time and space to measure the political
     preferences of parties. The Manifesto Corpus contains the collected and
     annotated election programmes in the Corpus format of the package 'tm' to enable
